// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert#inverse 1`] = `
<div
  className="alert alert-success alert-success--inverse alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="success icon"
    className="icon icon-check-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`Alert#inverse 2`] = `
<div
  className="alert alert-warning alert-warning--inverse alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="warning icon"
    className="icon icon-exclamation-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`Alert#inverse 3`] = `
<div
  className="alert alert-info alert-info--inverse alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="info icon"
    className="icon icon-info-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`Alert#inverse 4`] = `
<div
  className="alert alert-danger alert-danger--inverse alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="alert icon"
    className="icon icon-times-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`Alert#inverse 5`] = `
<div
  className="alert alert-error alert-error--inverse alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="error icon"
    className="icon icon-times-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`should render right thing and do not change unexpected 1`] = `
<div
  className="alert alert-success alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="success icon"
    className="icon icon-check-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`should render right thing and do not change unexpected 2`] = `
<div
  className="alert alert-warning alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="warning icon"
    className="icon icon-exclamation-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`should render right thing and do not change unexpected 3`] = `
<div
  className="alert alert-info alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="info icon"
    className="icon icon-info-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`should render right thing and do not change unexpected 4`] = `
<div
  className="alert alert-danger alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="alert icon"
    className="icon icon-times-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;

exports[`should render right thing and do not change unexpected 5`] = `
<div
  className="alert alert-error alert-dismissable"
  role="alert"
  style={undefined}
>
  <span
    aria-label="error icon"
    className="icon icon-times-circle"
  />
  <button
    className="close"
    onClick={undefined}
    type="button"
  >
    ×
  </button>
</div>
`;
